# Interval

./: .cirrus.yml  .gitlab-ci.yml  .mailmap  CMakeLists.txt  README.md  RunTests.sh  bitbucket-pipelines.yml
benchmarks/: Intervals&Containers.cpp
include/: Interval.h
source/: DynamicInterval.h  FloatConstant.h  Interval.h  IntervalClass.h  IntervalIndexedArray.h  IntervalIndexedVector.h  IntervalUtilities.h  StaticInterval.h
tests/: CMakeLists.txt  Containers.cpp  DynamicInterval.cpp  StaticInterval.cpp  tests.cpp
